# mist

./: .gitignore  Makefile  Makefile.am  Makefile.in  NOTES.txt  README  README.md  TODO  abstraction.c  abstraction.h  aclocal.m4  basis.c  basis.h  build_mist.sh  checkup.c  checkup.h  codegengoals.c  codegeninit.c  codegeninit.h  codegeninvar.c  codegeninvar.h  codegenrules.c  codegenrules.h  complement.c  complement.h  computesim.c  concretisation.c  concretisation.h  config.h  configure  configure.ac  def.h  delegatebuffer.spec  determinize.c  examplelea.spec  father_mangmt.h  findpathtransfer.c  findpathtransfer.h  index.html  initialmarking.c  (+41 more)
PN/: README  basicME.spec  csm.spec  extendedread-write.spec  fms.spec  mesh2x2.spec  mesh3x2.spec  multipool.spec  pncsacover.spec  pncsasemiliv.spec
PN+TRANS/: basicextransfer.spec  efm.spec  last-in-first-served.spec
PN+ZEROTEST/: rw.spec
benchmarks/: README.md
boundedPN/: dekker.spec  lamport.spec  newrtp.spec  peterson.spec  read-write.spec  rtp.spec
broad_inhib/: firefly.spec  illinois.spec
doc/: records.tex
examples/: README
graphs/: begin  body_template  d3_vars  generate_graphs.sh
scripts/: README.md  generate_graphs.sh  run_benchmarks.py
src/: Makefile.am  Makefile.in  TODO  abstraction.c  abstraction.h  basis.c  basis.h  checkup.c  checkup.h  codegengoals.c  codegengoals.h  codegeninit.c  codegeninit.h  codegeninvar.c  codegenrules.c  codegenrules.h  complement.c  computesim.c  computesim.h  config.h  def.h  determinize.c  determinize.h  error.c  error.h  father_mangmt.c  father_mangmt.h  mist.c  (+32 more)
(+50 files in other folders)
